--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "soft-ui-dashboard-react",
   "homepage": "https://arbsking.com/dashboard",
-  "engines": { "node": "18.x" },
   "version": "4.0.0",
   "author": "Creative Tim",
   "license": "SEE LICENSE IN <https://www.creative-tim.com/license>",
@@ -14,7 +13,7 @@
     "url": "git+https://github.com/app-generator/react-soft-ui-dashboard.git"
   },
   "engines": {
-    "node": "14 || 15 || 16",
+    "node": "18",
     "npm": ">=6"
   },
   "build": {
